force-app/main/default/objects/ssot__EmploymentOffer__dlm/fields/ssot__AcceptanceDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__AcceptanceDate__c</fullName>
    <label>Acceptance Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AcceptanceDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>