force-app/main/default/objects/ssot__EmploymentOffer__dlm/fields/ssot__EmployeeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmployeeId__c</fullName>
    <label>Employee</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmployeeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>