force-app/main/default/objects/ssot__EmploymentOffer__dlm/fields/ssot__EmploymentOfferStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmploymentOfferStatus__c</fullName>
    <label>Employment Offer Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmploymentOfferStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>