force-app/main/default/objects/ssot__EmploymentOffer__dlm/fields/ssot__ExpectedHireDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpectedHireDate__c</fullName>
    <label>Expected Hire Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExpectedHireDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>