force-app/main/default/objects/ssot__EmploymentOffer__dlm/fields/ssot__ExpectedStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpectedStartDate__c</fullName>
    <label>Expected Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExpectedStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>