force-app/main/default/objects/ssot__EmploymentOffer__dlm/fields/ssot__OfferCreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__OfferCreatedDateTime__c</fullName>
    <label>Offer Created Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OfferCreatedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>