force-app/main/default/objects/ssot__EmploymentOffer__dlm/fields/ssot__PayLevelId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PayLevelId__c</fullName>
    <label>Pay Level</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PayLevelId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>