force-app/main/default/objects/ssot__EmploymentOffer__dlm/fields/ssot__PayOfferAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__PayOfferAmount__c</fullName>
    <label>Pay Offer Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PayOfferAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>