force-app/main/default/objects/ssot__EmploymentOffer__dlm/fields/ssot__rel_1727366621825_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1727366621825_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EmploymentOffer_ApplicationId_map_Ap_rel</label>
    <referenceTo>ssot__Application__dlm</referenceTo>
    <relationshipLabel>EmploymentOffer_ApplicationId_map_Ap_rel</relationshipLabel>
    <relationshipName>rel_1727366621825_end</relationshipName>
    <type>Lookup</type>
</CustomField>