force-app/main/default/objects/ssot__EmploymentOffer__dlm/fields/ssot__rel_1727366623856_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1727366623856_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EmploymentOffer_ManagerId_map_Employ_rel</label>
    <referenceTo>ssot__Employee__dlm</referenceTo>
    <relationshipLabel>EmploymentOffer_ManagerId_map_Employ_rel</relationshipLabel>
    <relationshipName>rel_1727366623856_end</relationshipName>
    <type>Lookup</type>
</CustomField>