force-app/main/default/objects/ssot__EmploymentOffer__dlm/fields/ssot__rel_1727366628478_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1727366628478_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EmploymentOffer_EmployeeId_map_Emplo_rel</label>
    <referenceTo>ssot__Employee__dlm</referenceTo>
    <relationshipLabel>EmploymentOffer_EmployeeId_map_Emplo_rel</relationshipLabel>
    <relationshipName>rel_1727366628478_end</relationshipName>
    <type>Lookup</type>
</CustomField>